[20220816] modified datas about all record_debtors
