# backend/controllers/wallet.js
@@ -51,7 +51,8 @@ export const get_wallet = async (req, res, next) => {
                             for(var j = 0; j < result.length; ++j) {
                                 var record_debtor_obj = {
                                     debtor_id: result[j].debtor_id,
-                                    debtor_name: result[j].debtor_name
+                                    debtor_name: result[j].debtor_name,
+                                    debtor_record_amount: result[j].debtor_record_amount
                                 }
                                 record_data.record_debtors.push(record_debtor_obj);
                             }
@@ -184,7 +185,8 @@ export const search_record = async (req, res, next) => {
                             for(var i = 0; i < result.length; ++i) {
                                 var record_debtor_obj = {
                                     debtor_id: result[i].debtor_id,
-                                    debtor_name: result[i].debtor_name.slice(1, result[i].debtor_name.length-1)
+                                    debtor_name: result[i].debtor_name.slice(1, result[i].debtor_name.length-1),
+                                    debtor_record_amount: result[i].debtor_record_amount
                                 }
                                 results.record_debtors.push(record_debtor_obj);
                             }
